--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -85,6 +85,7 @@ sub {
 }
 img {
   border: 0;
+  padding-bottom: 15px;
 }
 svg:not(:root) {
   overflow: hidden;
@@ -767,7 +768,7 @@ pre code {
   position: relative;
   min-height: 1px;
   //padding-right: 15px;
-  padding-left: 15px;
+  //padding-left: 15px;
 }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
