--- a/css/main.css
+++ b/css/main.css
@@ -68,9 +68,8 @@ a:hover {
   font-size: 20px;
 }
 .logo-menu {
-  margin-top: 10px;
-  margin-bottom: 30px;
-  background-color: #edebf5;
+  //margin-top: 10px;
+  //margin-bottom: 30px;
 }
 .navbar {
   margin-bottom: 0;
