--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -736,6 +736,7 @@ pre code {
   padding-right: 15px;
   padding-left: 15px;
   padding-bottom: 10px;
+  padding-top: 70px;
   margin-right: auto;
   margin-left: auto;
 }
