--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,7 @@ a:hover {
 #layer_fixed .logo-menu {
   margin-top: 10px;
   margin-bottom: 20px;
+  margin-left: 10px;
 }
 .navbar {
   margin-bottom: 0;
