--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ a:hover {
   color: #00000;
 }
 #hero-area .btn {
-  margin-right: 20px;
+  //margin-right: 20px;
 }
 #hero-area img {
   max-width: 100%;
