--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,7 @@ a:hover {
   padding: 50px 0;
 }
 #hero-area .row {
-  padding: 100px 0;
+  //padding: 100px 0;
 }
 .hero-inner {
   position: relative;
