--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
-@import url(http://fonts.googleapis.com/earlyaccess/cwtexhei.css);
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans);
 body {
-  font-family: 'cwTeXHei', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 100;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
